<resources>
    <string name="app_name">AppFomulariosKotlin</string>
    <string name="btnirregistro">REGISTRAR PERSONAS</string>
    <string name="tituloregistro">REGISTRAR PERSONA</string>
    <string name="valnombres">Ingrese sus nombres</string>
    <string name="valapellidos">Ingrese sus apellidos</string>
    <string name="valgenero">Seleccione su género:</string>
    <string name="valmasculino">Masculino</string>
    <string name="valfemenino">Femenino</string>
    <string name="valpreferencias">Seleccione sus preferencias:</string>
    <string name="valdeporte">Deporte</string>
    <string name="valmusica">Música</string>
    <string name="valotros">Otras preferencias</string>
    <string name="valestadocivil">Seleccione su estado civil:</string>
    <string name="valnotificar">¿Notificar a usuario?</string>
    <string name="valregistrarpersona">Registrar Persona</string>
    <string name="vallistarpersonas">Listar Personas</string>
    <string name="valtitulolistapersona">LISTADO DE PERSONAS REGISTRADAS</string>
    <string name="errornombreapellido">El nombre y apellido son obligatorios.</string>
    <string name="errorgenero">Es obligatorio seleccionar su género.</string>
    <string name="errorestadocivil">Es obligatorio seleccionar el estado civil.</string>
    <string name="errorpreferencia">Debe seleccionar al menos una preferencia.</string>
    <string name="mensajeregistro">Persona registrada correctamente.</string>
</resources>